Add 'Contact Note' to agent_contact; Also use the readonly form context to render the contact readonly template - so it retains carriage returns in textarea;

--- a/frontend/app/views/agents/_contact_details.html.erb
+++ b/frontend/app/views/agents/_contact_details.html.erb
@@ -13,5 +13,6 @@
     <%= form.label_and_textfield "telephone_ext" %>
     <%= form.label_and_textfield "fax" %>
     <%= form.label_and_textfield "email" %>
+    <%= form.label_and_textarea "note" %>
   </div>
 <% end %>
