--- a/frontend/app/views/file_versions/_template.html.erb
+++ b/frontend/app/views/file_versions/_template.html.erb
@@ -2,7 +2,7 @@
   <div class="subrecord-form-fields">
     <%= form.label_and_textfield("file_uri") %>
     <%= form.label_and_boolean("publish", {}, form.default_for("publish")) %>
-    <%= form.label_and_select("use_statement", form.possible_options_for("use_statement")) %>
+    <%= form.label_and_select("use_statement", form.possible_options_for("use_statement", true)) %>
     <%= form.label_and_select("xlink_actuate_attribute", form.possible_options_for("xlink_actuate_attribute", true)) %>
     <%= form.label_and_select("xlink_show_attribute", form.possible_options_for("xlink_show_attribute", true)) %>
     <%= form.label_and_textfield("file_format_name") %>
