Update UI to handle storing of repository URI on the session (rather than the code); Also allow select of repo via the repo list and only on repo's the user has permissions to

--- a/frontend/app/assets/stylesheets/archivesspace/tables.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tables.less
@@ -12,6 +12,11 @@ table {
   dl {
     margin: 0;
   }
+  .table-record-actions {
+    .btn {
+      white-space: nowrap;
+    }
+  }
 }
 
 table.table-sortable {
