--- a/frontend/app/views/collection_management_records/index.html.erb
+++ b/frontend/app/views/collection_management_records/index.html.erb
@@ -55,7 +55,7 @@
          </table>
       <% else %>
          <p class="alert alert-info">
-            There are currently no collection management records in this, <strong><%= session[:repo] %></strong>, repository.
+            There are currently no collection management records in this repository.
          </p>
       <% end %>
     </div>
