--- a/frontend/app/views/events/index.html.erb
+++ b/frontend/app/views/events/index.html.erb
@@ -43,7 +43,7 @@
          </table>
       <% else %>
          <p class="alert alert-info">
-            There are currently no accessions in this, <strong><%= session[:repo] %></strong>, repository.
+            There are currently no accessions in this repository.
          </p>
       <% end %>
      </div>
