--- a/frontend/app/views/repositories/_toolbar.html.erb
+++ b/frontend/app/views/repositories/_toolbar.html.erb
@@ -2,7 +2,7 @@
   <div class="span12">
     <div class="record-toolbar">
       <div class="pull-right">
-          <% if session[:repo_id] != @repository.id %>
+          <% if session[:repo_id] != @repository.id and @repositories.any?{|r| r['uri'] === @repository.uri} %>
             <%= form_for @repository, :as => "repository", :url => {:action => :select}, :html => {:style => "display: inline;"} do |f| %>
               <button type="submit" class="btn btn-small btn-success"><%= I18n.t("repository._html.action.select") %></button>
             <% end %>
