--- a/frontend/app/views/resources/index.html.erb
+++ b/frontend/app/views/resources/index.html.erb
@@ -41,7 +41,7 @@
        <%= render :partial => "shared/pagination" %>
       <% else %>
          <p class="alert alert-info">
-            There are currently no Resources in this, <strong><%= session[:repo] %></strong>, repository.
+            There are currently no Resources in this repository.
          </p>
       <% end %>
      </div>
