Add note_bioghist to agents and introduce new note_citation, note_outline and note_abstract

--- a/frontend/app/views/agents/show.html.erb
+++ b/frontend/app/views/agents/show.html.erb
@@ -82,6 +82,10 @@
           </div>
         <% end %>
 
+        <% if @agent.notes.length > 0 %>
+          <%= render :partial => "notes/show", :locals => { :notes => @agent.notes, :context => readonly } %>
+        <% end %>
+
         <% if @agent.external_documents.length > 0 %>
           <%= render :partial => "external_documents/show", :locals => { :external_documents => @agent.external_documents, :section_id => "agent_external_documents_" } %>
         <% end %>
