--- a/frontend/app/views/collection_management/index.html.erb
+++ b/frontend/app/views/collection_management/index.html.erb
@@ -12,32 +12,29 @@
 
       <%= render :partial => "shared/flash_messages" %>
 
-     <% if @search_data.has_key?('results') && @search_data['results'].length  > 0 %>
+     <% if @search_data['results'].length  > 0 %>
          <table class="table table-striped table-bordered table-condensed">
            <thead>
              <tr>
+               <th><%= I18n.t("collection_management._html.title_prefix") %></th>
                <th><%= I18n.t("collection_management.processing_priority") %></th>
                <th><%= I18n.t("collection_management.processing_status") %></th>
                <th><%= I18n.t("collection_management.processors") %></th>
-               <th><%= I18n.t("collection_management.parent") %></th>
-               <th width="70px"><!-- actions --></th>
+               <th>Last modified</th>
              </tr>
            </thead>
            <tbody>
-              <% @search_data['results'].each do |cmr| %>
+              <% @search_data['results'].each do |result| %>
               <tr>
-               <td><%= I18n.t("enumerations.collection_management_processing_priority.#{cmr.processing_priority || 'none'}", :default => "--") %></td>
-               <td><%= I18n.t("enumerations.collection_management_processing_status.#{cmr.processing_status || 'none'}", :default => "--") %></td>
-               <td><%= cmr.processors %></td>
-               <td><%= "hmm, how to ref the parent? ..." %></td>
                <td>
-                  <div class="btn-group" style="float: right">
-                           <%= link_to I18n.t("actions.view"), {:controller => :accessions, :action => :show, :id => cmr.id}, :class => "btn btn-mini" %>
-                    <% if user_can?('update_archival_record') %>
-                      <%= link_to I18n.t("actions.edit"), {:controller => :accessions, :action => :edit, :id => cmr.id}, :class => "btn btn-mini" %>
-                    <% end %>
-                  </div>
+                 <% pref = JSONModel.parse_reference(result['parent_id']) %>
+                 <span class="label label-info"><%= I18n.t("#{pref[:type]}._html.singular") %></span>
+                 <%= link_to result['parent_title'], {:controller => "#{pref[:type]}s".intern, :action => :show, :id => pref[:id] } %>
                </td>
+               <td><%= I18n.t("enumerations.collection_management_processing_priority.#{result['processing_priority'] || 'none'}", :default => "--") %></td>
+               <td><%= I18n.t("enumerations.collection_management_processing_status.#{result['processing_status'] || 'none'}", :default => "--") %></td>
+               <td><%= result['processors'] %></td>
+               <td><%= Time.parse(result['last_modified']).getlocal %></td>
              </tr>
              <% end %>
            </tbody>
