--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -12,7 +12,19 @@
        <%= form.label_and_date "accession_date", {:field_opts => {:value => (@accession.accession_date.blank? ? "" : Date.strptime(@accession.accession_date, "%Y-%m-%d"))}} %>
        <%= form.label_and_textarea "content_description" %>
        <%= form.label_and_textarea "condition_description" %>
+       <%= form.label_and_textarea "disposition" %>
+       <%= form.label_and_textarea "inventory" %>
+       <%= form.label_and_textarea "provenance" %>
+       <%= form.label_and_textarea "retention_rule" %>  
+       <%= form.label_and_textarea "general_note" %>       
        <%= form.label_and_select "acquisition_type", form.possible_options_for("acquisition_type", true) %>
+       <%= form.label_and_select "resource_type", form.possible_options_for("resource_type", true) %>
+       <%= form.label_and_boolean "restrictions_apply", {}, form.default_for("restrictions_apply") %>
+       <%= form.label_and_boolean "publish", {}, form.default_for("publish") %>
+       <%= form.label_and_boolean "access_restrictions", {}, form.default_for("access_restrictions") %>
+       <%= form.label_and_textarea "access_restrictions_note" %> 
+       <%= form.label_and_boolean "use_restrictions", {}, form.default_for("use_restrictions") %>
+       <%= form.label_and_textarea "use_restrictions_note" %> 
     </fieldset>
   </section>
 <% end %>
