--- a/frontend/app/views/accessions/show.html.erb
+++ b/frontend/app/views/accessions/show.html.erb
@@ -20,7 +20,23 @@
             <%= readonly.label_and_date "accession_date" %>
             <%= readonly.label_and_textarea "content_description" %>
             <%= readonly.label_and_textarea "condition_description" %>
+            <%= readonly.label_and_textarea "disposition" %>
+            <%= readonly.label_and_textarea "inventory" %>
+            <%= readonly.label_and_textarea "provenance" %>
+            <%= readonly.label_and_textarea "retention_rule" %>
+            <%= readonly.label_and_textarea "general_note" %>
+            
+            
             <%= readonly.label_and_select "acquisition_type", readonly.possible_options_for("acquisition_type", true) %>
+            <%= readonly.label_and_select "resource_type", readonly.possible_options_for("resource_type", true) %>
+            <%= readonly.label_and_boolean "restrictions_apply" %>
+            <%= readonly.label_and_boolean "publish" %>
+            <%= readonly.label_and_boolean "access_restrictions" %>
+            <%= readonly.label_and_textarea "access_restrictions_note" %>
+            <%= readonly.label_and_boolean "use_restrictions" %>
+            <%= readonly.label_and_textarea "use_restrictions_note" %>
+            
+            
           </section>
           <% end %>
 
