--- a/frontend/app/views/search/_listing.html.erb
+++ b/frontend/app/views/search/_listing.html.erb
@@ -2,7 +2,7 @@
   <table class="table table-striped table-bordered table-condensed table-hover table-sortable">
     <thead>
     <tr>
-      <% if @search_data.single_type? %>
+      <% if show_record_type? %>
         <th width="160px" class="sortable <% if @search_data.sorted_by === "primary_type"%>sort-<%= @search_data.current_sort_direction %><% end %>">
           <%= link_to I18n.t("search_results.result_type"), params_for_search("sort" => @search_data.sort_filter_for("primary_type")) %>
         </th>
@@ -20,7 +20,7 @@
       deleted = (params.has_key?("deleted_uri") and params["deleted_uri"] === result["id"]) || false
     %>
       <tr class="<%= "deleted" if deleted %>">
-        <% if @search_data.single_type? %>
+        <% if show_record_type? %>
           <td>
             <%=  I18n.t("#{result["primary_type"]}._html.singular") %>
           </td>
