Rename data 'uncertain' fields to 'certainty'

--- a/frontend/app/views/dates/_show.html.erb
+++ b/frontend/app/views/dates/_show.html.erb
@@ -28,7 +28,7 @@
               <% end %>
             </div>
             <div class="span3">
-              <% if date['uncertain']%><%= I18n.t("date.uncertain_#{date['uncertain']}") %><% end %>
+              <% if date['certainty']%><%= I18n.t("date.certainty#{date['certainty']}") %><% end %>
             </div>
           </div>
         </div>
