--- a/frontend/app/views/dates/_template.html.erb
+++ b/frontend/app/views/dates/_template.html.erb
@@ -86,7 +86,7 @@
         <% form.emit_template("date_type_#{form.obj["date_type"]}", form.obj) %>
       <% end %>
 
-      <%= form.label_and_select("uncertain", form.possible_options_for("uncertain", true)) %>
+      <%= form.label_and_select("certainty", form.possible_options_for("certainty", true)) %>
       <%= form.label_and_select("era", form.possible_options_for("era", true)) %>
       <%= form.label_and_select("calendar", form.possible_options_for("calendar", true)) %>
 
