--- a/backend/app/views/reports/_footer.erb
+++ b/backend/app/views/reports/_footer.erb
@@ -1,3 +1,4 @@
-<footer>
-  <p>this is the report footer</p>
-</footer>
+<div class="footer">
+  <% time = DateTime.now %>
+  Report Generated at <%= time.strftime("%Y-%m-%d %H:%M %Z") %>
+</div>
