--- a/backend/app/views/reports/_header.erb
+++ b/backend/app/views/reports/_header.erb
@@ -1,3 +1,4 @@
-<header>
-  <h1>This is the report header</h1>
-</header>
+<div class="header">
+  <img class="logo" src="/images/archivesspace.small.png"/>
+  <h1><%= @report.title %></h1>
+</div>
