--- a/backend/app/views/reports/report.erb
+++ b/backend/app/views/reports/report.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="/css/report.css" />
+  <link rel="stylesheet" href="/css/report.css" media="all" type="text/css" />
 </head>
 <body>
 
