--- a/backend/app/views/reports/_listing.erb
+++ b/backend/app/views/reports/_listing.erb
@@ -1,3 +1,20 @@
-<ul>
-  <li>LIST</li>
-</ul>
+<table class="report-listing">
+  <thead>
+    <tr>
+      <% @report.headers.each do |heading| %>
+        <th><%= heading %></th>
+      <% end %>
+    </tr>
+  </thead>
+  <tbody>
+    <% @report.each do |record| %>
+      <tr>
+        <% @report.headers.each do |heading| %>
+          <td>
+            <%= record[heading] %>
+          </td>
+        <% end %>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
