--- a/frontend/app/views/collection_management/index.html.erb
+++ b/frontend/app/views/collection_management/index.html.erb
@@ -1,49 +1,21 @@
-<%= setup_context :title => I18n.t("collection_management._html.plural") %>
-
+<%= setup_context(:title => I18n.t("collection_management._html.plural")) %>
+<%
+add_column(I18n.t("search_results.result_type"), proc {|record| I18n.t("#{JSONModel.parse_reference(record['parent_id'])[:type]}._html.singular")}, :sortable => true, :sort_by => "parent_id")
+add_column(I18n.t("collection_management.processing_priority"), proc {|record| I18n.t("enumerations.collection_management_processing_priority.#{record['processing_priority'] || 'none'}", :default => '--')}, :sortable => true, :sort_by => "processing_priority")
+add_column(I18n.t("collection_management.processing_status"), proc {|record| I18n.t("enumerations.collection_management_processing_status.#{record['processing_status'] || 'none'}", :default => '--')}, :sortable => true, :sort_by => "processing_status")
+%>
 <div class="row-fluid">
-   <div class="span3">
-      The facets/search filters will go here.
-   </div>
-   <div class="span9">
+  <div class="span3">
+    <%= render :partial => "search/filter" %>
+  </div>
+  <div class="span9">
     <div class="record-pane">
-      <div class="btn-group pull-right">
-      </div>
+
       <h2><%= I18n.t("collection_management._html.plural") %></h2>
 
       <%= render :partial => "shared/flash_messages" %>
 
-     <% if @search_data['results'].length  > 0 %>
-         <table class="table table-striped table-bordered table-condensed">
-           <thead>
-             <tr>
-               <th><%= I18n.t("collection_management._html.title_prefix") %></th>
-               <th><%= I18n.t("collection_management.processing_priority") %></th>
-               <th><%= I18n.t("collection_management.processing_status") %></th>
-               <th><%= I18n.t("collection_management.processors") %></th>
-               <th>Last modified</th>
-             </tr>
-           </thead>
-           <tbody>
-              <% @search_data['results'].each do |result| %>
-              <tr>
-               <td>
-                 <% pref = JSONModel.parse_reference(result['parent_id']) %>
-                 <span class="label label-info"><%= I18n.t("#{pref[:type]}._html.singular") %></span>
-                 <%= link_to result['parent_title'], {:controller => "#{pref[:type]}s".intern, :action => :show, :id => pref[:id] } %>
-               </td>
-               <td><%= I18n.t("enumerations.collection_management_processing_priority.#{result['processing_priority'] || 'none'}", :default => "--") %></td>
-               <td><%= I18n.t("enumerations.collection_management_processing_status.#{result['processing_status'] || 'none'}", :default => "--") %></td>
-               <td><%= result['processors'] %></td>
-               <td><%= Time.parse(result['last_modified']).getlocal %></td>
-             </tr>
-             <% end %>
-           </tbody>
-         </table>
-      <% else %>
-         <p class="alert alert-info">
-            There are currently no collection management records in this, <strong><%= session[:repo] %></strong>, repository.
-         </p>
-      <% end %>
+      <%= render :partial => "search/listing" %>
     </div>
-   </div>
+  </div>
 </div>
