--- a/backend/app/views/reports/_header.erb
+++ b/backend/app/views/reports/_header.erb
@@ -1,4 +1,4 @@
 <div class="header">
-  <img class="logo" src="/images/archivesspace.small.png"/>
-  <h1><%= @report.title %></h1>
+  <img class="logo" src="<%= @base_url %>/images/archivesspace.small.png"/>
+  <h1><%= report.title %></h1>
 </div>
