--- a/backend/app/views/reports/_listing.erb
+++ b/backend/app/views/reports/_listing.erb
@@ -1,15 +1,15 @@
 <table class="report-listing">
   <thead>
     <tr>
-      <% @report.headers.each do |heading| %>
+      <% report.headers.each do |heading| %>
         <th><%= heading %></th>
       <% end %>
     </tr>
   </thead>
   <tbody>
-    <% @report.each do |record| %>
+    <% report.each do |record| %>
       <tr>
-        <% @report.headers.each do |heading| %>
+        <% report.headers.each do |heading| %>
           <td>
             <%= record[heading] %>
           </td>
