fixed indexer bug when adding collection_management subrecord ot create time

--- a/frontend/app/views/agents/index.html.erb
+++ b/frontend/app/views/agents/index.html.erb
@@ -30,7 +30,7 @@
           </div>
         <% end %>
       </div>
-      <h2><%= I18n.t("accession._html.plural") %></h2>
+      <h2><%= I18n.t("agent._html.plural") %></h2>
 
       <%= render :partial => "shared/flash_messages" %>
 
