--- a/frontend/app/views/collection_management/index.html.erb
+++ b/frontend/app/views/collection_management/index.html.erb
@@ -3,7 +3,7 @@
 add_column(I18n.t("search_results.result_type"), proc {|record| I18n.t("#{JSONModel.parse_reference(record['parent_id'])[:type]}._html.singular")}, :sortable => true, :sort_by => "parent_id")
 add_column(I18n.t("collection_management.processing_priority"), proc {|record| I18n.t("enumerations.collection_management_processing_priority.#{record['processing_priority'] || 'none'}", :default => '--')}, :sortable => true, :sort_by => "processing_priority")
 add_column(I18n.t("collection_management.processing_status"), proc {|record| I18n.t("enumerations.collection_management_processing_status.#{record['processing_status'] || 'none'}", :default => '--')}, :sortable => true, :sort_by => "processing_status")
-add_column(I18n.t("collection_management.processing_hours_total"), proc {|record| record['processing_hours_total']}, :sortable => true, :sort_by => "processing_hours_total")
+add_column(I18n.t("collection_management.processing_hours_total_short"), proc {|record| record['processing_hours_total']}, :sortable => true, :sort_by => "processing_hours_total")
 %>
 <div class="row-fluid">
   <div class="span3">
